Source/eks-deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: swbc-ethos-ai
  labels:
    name: swbc-ethos-ai
    environment: production
